<resources>
    <string name="app_name">Ticket Fast</string>

    <string name="registration_expiration_year">EXP_YEAR</string>
    <string name="registration_expiration_month">EXP_MONTH</string>
    <string name="registration_expiration_day">EXP_DAY</string>
    <string name="username">USERNAME</string>
    <string name="profile_picture">PROFILE_PICTURE</string>

    <string name="action_settings">Settings</string>
    <string name="seleccionar_filtros">Seleccionar filtros</string>
    <string name="fecha_pre">Fecha:</string>
    <string name="cliente_pre">Cliente:</string>
    <string name="producto_pre">Producto:</string>
    <string name="total_vendido_en_pesos">Total vendido en pesos:</string>
    <string name="total_vendido_en_unidades">Total vendido en unidades:</string>
    <string name="cantidad_de_rdenes">Cantidad de órdenes:</string>
    <string name="cantidad_de_devoluciones">Cantidad de devoluciones:</string>
    <string name="rango_de_datos">Rango de datos:</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="año">Año</string>
    <string name="graficar">Graficar:</string>
    <string name="por_venta">Por venta</string>
    <string name="por_unidades">Por unidades</string>
    <string name="selecciona_cliente">Selecciona cliente</string>
    <string name="selecciona_producto">Selecciona producto</string>
    <string name="buscar">Buscar:</string>
    <string name="cliente">Cliente</string>
    <string name="agregar_cliente">Agregar cliente</string>
    <string name="agregar_precio">Agregar precio especial</string>
    <string name="producto">Producto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_base_pre">Precio base:</string>
    <string name="precio_base">Precio base</string>
    <string name="precio_nuevo">Precio nuevo:</string>
    <string name="_0_00">$0.00</string>
    <string name="precio_actual">Precio actual:</string>
    <string name="ninguno">Ninguno</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="total">Total:</string>
    <string name="crear_orden">Crear orden</string>
    <string name="precio_pre">Precio:</string>
    <string name="cantidad_pre">Cantidad:</string>
    <string name="es_una_devolucion">Es una devolución?</string>
    <string name="_0">0</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="historial_de_ordenes">Historial de órdenes</string>
    <string name="administrar_clientes">Administrar clientes</string>
    <string name="administrar_inventario">Administrar productos</string>
    <string name="menu">Menú</string>
    <string name="stock">Cant. en inventario</string>
    <string name="cant_en_inventario_">Cant. en inventario:</string>
    <string name="conectar_impresora">Conectar impresora</string>
    <string name="sin_conexion">Sin Conexión</string>
    <string name="imprimir">Imprimir</string>
    <string name="selecciona_un_cliente">Selecciona un Cliente</string>
    <string name="fechas">Fechas</string>
    <string name="_1">1</string>
    <string name="no_hay_conexion">No hay conexión</string>
    <string name="conectado">Conectado</string>
    <string name="buscando_impresora">Buscando impresora</string>
    <string name="analiticas">Analíticas</string>
    <string name="clientes">Clientes</string>
    <string name="precios_por_cliente">Precios por cliente</string>
    <string name="inventario">Inventario</string>
    <string name="orden_generada">Orden generada</string>
    <string name="ticket_fast">Ticket Fast</string>
    <string name="correo_electronico_">Correo electrónico:</string>
    <string name="ejemplo_correo">ejemplo@correo.com</string>
    <string name="codigo_de_registro_">Código de registro:</string>
    <string name="hint_registro">Pega aquí el código</string>
    <string name="registrar_aplicacion">Registrar aplicación</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="envia_un_correo_a">Envía un WhatsApp a 81 1610 8680</string>
    <string name="si_no_tienes_codigo_de_registro">si no tienes código de registro.</string>
    <string name="tu_empresa">Tu empresa:</string>
    <string name="editar">editar</string>
    <string name="nombre_del_negocio">Nombre del negocio</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="sin_nombre">Sin nombre</string>
    <string name="x0_00">0.00</string>
    <string name="limpiar_carrito">Limpiar carrito</string>

    <string name="placeholderResgist">Registre contraseña del usuario admin</string>
    <string name="placeholderPassword">Ingresa la contraseña</string>
    <string name="registPassword">Registrar contraseña</string>
    <string name="messageDialogRegist">¿Esta seguro de guardar esta contraseña?</string>
    <string name="cancelButton">No</string>
    <string name="positiveButton">Si</string>

    <string name="logOut">Cerrar sesión</string>
    <string name="loginAdmin">Iniciar sesión</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="loginDispatcher">Continuar como vendedor</string>

</resources>
