<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:contentDescription="@string/ticket_fast"
                android:src="@drawable/ticket_fast_logo" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/correo_electronico_"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/start_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ejemplo_correo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/codigo_de_registro_"
                android:textSize="18sp" />

        <EditText
                android:id="@+id/start_et_registration_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_registro"
                android:importantForAutofill="no"
                android:inputType="text" />

        <Button
                android:id="@+id/start_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_selector"
                android:text="@string/registrar_aplicacion"
                android:textColor="@color/white" />

        <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_no_tienes_codigo_de_registro"
                android:textSize="15sp"/>
        <Button
                android:id="@+id/send_btn_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@drawable/button_whatsapp"
                android:drawableRight="@drawable/ic_whatsapp" android:padding="10dp"
                android:text="@string/envia_un_correo_a" android:textColor="@color/white" android:drawableEnd="@drawable/ic_whatsapp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>