<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <Button
                    android:id="@+id/analytics_dialog_btn_select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fecha_pre"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"/>
            <TextView
                    android:id="@+id/analytics_dialog_tv_date_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:text=""/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/rango_de_datos"/>

        <RadioGroup
                android:id="@+id/analytics_dialog_rg_granularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <RadioButton
                    android:id="@+id/analytics_dialog_rb_granularity_week"
                    android:background="@drawable/radio_button_selector"
                    android:textColor="@color/range_white"
                    android:button="@null"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semana"
                    android:padding="10dp"
                    android:layout_weight=".335"
                    android:gravity="center"/>
            <RadioButton
                    android:id="@+id/analytics_dialog_rb_granularity_month"
                    android:background="@drawable/radio_button_selector"
                    android:textColor="@color/range_white"
                    android:button="@null"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mes"
                    android:padding="10dp"
                    android:layout_weight=".335"
                    android:gravity="center"/>
            <RadioButton
                    android:id="@+id/analytics_dialog_rb_granularity_year"
                    android:background="@drawable/radio_button_selector"
                    android:textColor="@color/range_white"
                    android:button="@null"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/año"
                    android:padding="10dp"
                    android:layout_weight=".335"
                    android:gravity="center"/>
        </RadioGroup>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/graficar"/>
        <RadioGroup
                android:id="@+id/analytics_dialog_rg_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <RadioButton
                    android:id="@+id/analytics_dialog_rb_chart_revenue"
                    android:background="@drawable/radio_button_selector"
                    android:textColor="@color/range_white"
                    android:button="@null"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/por_venta"
                    android:padding="10dp"
                    android:layout_weight=".335"
                    android:gravity="center"
            />
            <RadioButton
                    android:id="@+id/analytics_dialog_rb_chart_quantity"
                    android:background="@drawable/radio_button_selector"
                    android:textColor="@color/range_white"
                    android:button="@null"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/por_unidades"
                    android:padding="10dp"
                    android:layout_weight=".335"
                    android:gravity="center"/>
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <AutoCompleteTextView
                    android:id="@+id/analytics_dialog_act_select_client"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/selecciona_cliente"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/analytics_dialog_btn_clear_client"/>
            <Button
                    android:id="@+id/analytics_dialog_btn_clear_client"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_close_black_24dp"
                    android:drawableStart="@drawable/ic_close_black_24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/analytics_dialog_act_select_client"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <AutoCompleteTextView
                    android:id="@+id/analytics_dialog_act_select_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/analytics_dialog_btn_clear_product"
                    android:hint="@string/selecciona_producto"/>
            <Button
                    android:id="@+id/analytics_dialog_btn_clear_product"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_close_black_24dp"
                    android:drawableStart="@drawable/ic_close_black_24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/analytics_dialog_act_select_product"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>